Add APEX Playground module with UI, API, and configuration files